updated /positions
