# docs/swagger.yaml
@@ -492,19 +492,6 @@ paths:
       tags:
         - Position
       summary: Get current car positions
-      parameters:
-        - name: whatshere[pointA]
-          in: query
-          required: true
-          description: Point A 
-          schema:
-            $ref: '#/components/schemas/Point'
-        - name: whatshere[pointB]
-          in: query
-          required: true
-          description: Point B 
-          schema:
-            $ref: '#/components/schemas/Point'
       responses:
         "200":
           description: List of current car positions within the defined region
